package NTestsResult;

message TTests {
    message TTest {
        optional string TestName = 1;

        message TRequest {
            optional string Key = 1;
            optional bytes Answer = 2;
        }
        repeated TRequest Requests = 2;
    };

    repeated TTest Tests = 1;
};
