syntax="proto3";

package proto;

option go_package="/;proto";

service TestService {
  rpc TestMethod1(TestMethodRequest) returns (TestMethodResponse);
  rpc GetRequiredVersion(TestMethodRequest) returns (TestMethodResponse);

}

message TestMethodRequest {
}

message TestMethodResponse {
}